# alertas-inmet-api

./: .gitignore  input.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yml
alertas_inmet_api/: __init__.py  alerta.py  alertas.py  api.py  hanoi.py
tests/: input.json  test_hanoi.py  test_inmet_api.py
