[tool.poetry]
name = "alertas_inmet_api"
version = "0.1.0"
description = ""
authors = ["Seu Nome <seu@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

