[tool.poetry]
name = "alertas_inmet_api"
version = "0.1.0"
description = "API que retorna os dados de Alertaa do INMET"
authors = ["Eduardo Hiratuka <eduardo.hiratuka@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
shapely = "^2.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

